[package]
name = "hugo"
version = "0.1.0"
authors = ["anekos <anekos@snca.net>"]
edition = "2018"

[dependencies]
app_dirs = "*"
argparse = "*"
chrono = "*"
clap = "*"
failure = "*"
humantime = "*"
time = "*"
if-let-return = "*"

[dependencies.rusqlite]
version = "0.16"
features = ["chrono"]

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
